# obsidian-agent

./: Dockerfile  README.md  constitution.yaml  pyproject.toml
src/obsidian_agent/: __init__.py  agent.py  main.py  service.py
src/obsidian_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_agent.py  test_main.py  test_service.py
