[project]
name = "obsidian-agent"
version = "0.1.0"
description = "DUQ Obsidian specialist agent - manages Obsidian vault operations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Denis", email = "noreply@example.com" }
]

dependencies = [
    # Agent core library (from GitHub)
    "duq-agent-core @ git+https://github.com/duq-ecosystem/duq-agent-core.git@master",

    # FastAPI for A2A server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    # Async Redis
    "redis>=5.0.0",

    # YAML for constitution
    "pyyaml>=6.0",

    # Logging
    "loguru>=0.7.0",

    # File operations
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
obsidian-agent = "obsidian_agent.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
